# RimaTon

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: main.css  tailwind.css
src/: main.rs
src/configuration/: mod.rs
src/exarotonapi/: mod.rs
src/logger/: mod.rs
src/mainpage/: mod.rs
